class AppStrings {
  AppStrings._();

  static const String appName = 'String Calculator TDD';
  static const String inputWithDelimiterHint =
      'Enter any numbers separated by comma (e.g., 1,2,3)';
  static const String numberInputHint = 'Enter numbers here';
  static const String result = 'Result';
  static const String calculateSum = 'Calculate Sum';
  static const String negativeNumbersNotAllowed =
      'Negative numbers not allowed:';
}
